Add .gitignore and remove .vscode/.DS_Store from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
+# macOS
 .DS_Store
+
+# VS Code
+.vscode/
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pkl
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+
+# Jupyter
+.ipynb_checkpoints/
+*.nbconvert.ipynb
+
+# Logs
+*.log
+
+# Others
+*.swp
